<resources>
    <string name="app_name">Secure Notes</string>
    <string name="login">LOGIN</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="login_continue">Login to continue</string>
    <string name="dont_have_account">Don\'t have an account?</string>
    <string name="alredy_have_account">Already have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="register">REGISTER</string>
    <string name="email">Email</string>

    <!-- Notes -->
    <string name="title">Title</string>
    <string name="note">Note</string>
    <string name="save_note">Save Note</string>
    <string name="notes">Notes</string>

    <!-- Account -->
    <string name="account">Account</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>

    <!-- Theme -->
    <string name="appearance">Appearance</string>
    <string name="light_mode">Light Mode</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="system_default">System Default</string>

    <!-- Privacy -->
    <string name="privacy_title">Privacy Statement</string>

    <string name="privacy_text">
        This application stores notes securely on your device using SQLite.
        User preferences are stored using SharedPreferences.
        Your personal information is not shared with third parties.
    </string>

</resources>