<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="24dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/appearance"
            android:textSize="22sp"
            android:textStyle="bold"/>

        <RadioGroup
            android:id="@+id/themeGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/rbLight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/light_mode"/>

            <RadioButton
                android:id="@+id/rbDark"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dark_mode"/>

            <RadioButton
                android:id="@+id/rbSystem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/system_default"/>

        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/privacy_title"
            android:textSize="22sp"
            android:textStyle="bold"
            android:layout_marginTop="30dp"/>

        <TextView
            android:id="@+id/txtPrivacy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/privacy_text"
            android:layout_marginTop="10dp"/>

    </LinearLayout>

</ScrollView>